packages/modal/src/Modal.sass
//////////////////////////////////////////
//              Variables
//////////////////////////////////////////

$topbar-spacing: 1rem
$topbar-height: 3.4rem

//////////////////////////////////////////
//                Mixins
//////////////////////////////////////////

=desktop-window($width)
  +center
  height: auto
  width: $width

  .Modal__Topbar:not(.Modal__Topbar--sticky)
    position: relative
    padding: 0
    box-shadow: none
    background: transparent

  .Modal__Content
    padding-top: $spacing
    flex: none
    border-radius: 0.2rem

  .Modal__Topbar--sticky
    width: $width

  .Modal__Topbar--sticky ~ .Modal__Content
    padding-top: calc(#{$spacing} + #{$topbar-height})

  &.Animation--Window-enter-active,
  &.Animation--Window-leave-active
    transition: margin-top 0.3s

  &.Animation--Window-enter,
  &.Animation--Window-leave-active
    margin-top: -2rem

//////////////////////////////////////////
//               Elements
//////////////////////////////////////////

.Modal,
.Modal__Backdrop,
.Modal__Window
  position: fixed
  top: 0
  left: 0
  height: 100vh
  width: 100vw

.Modal
  overflow: scroll
  z-index: 50

.Modal__Backdrop
  background: rgba($black, 0.4)
  z-index: 1

.Modal__Window
  display: flex
  flex-direction: column
  z-index: 2

.Modal__Topbar
  position: fixed
  display: flex
  justify-content: flex-end
  align-items: center
  flex: none
  top: 0
  height: $topbar-height
  width: 100%
  padding: 0 $topbar-spacing
  color: $white
  background: $grey-dark
  box-shadow: 0 0.2rem 0.3rem 0 rgba($black, 0.5)
  transition: padding .2s ease
  z-index: 1

.Modal__Content
  flex: 1
  padding: $spacing
  padding-top: calc(#{$spacing} + #{$topbar-height})
  background: $white

//////////////////////////////////////////
//              Variants
//////////////////////////////////////////

@media #{$over-sm}
  .Modal__Window--small
    +desktop-window(48rem)
  .Modal__Window--medium
    +desktop-window(66rem)

.Modal__Window--large
  @media #{$over-md}
    +desktop-window(96rem)
  @media #{$over-lg}
    +desktop-window(117rem)

.Modal__Window--scrollable
  position: relative
  margin: 5rem auto
  transform: initial
  top: initial
  left: initial

.Animation--Backdrop-enter-active,
.Animation--Backdrop-leave-active
  transition: all 0.2s

.Animation--Backdrop-enter,
.Animation--Backdrop-leave-active
  opacity: 0

//////////////////////////////////////////
//          Not related stuff
//////////////////////////////////////////

.Button--reset
  font-size: 1.4rem
  border: none
  background: none
  text-transform: uppercase
  font-weight: bold
  color: inherit

